--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "Website"
+    "liveServer.settings.multiRootWorkspaceName": "Website",
+    "html.format.enable": false,
+    "git.autoRepositoryDetection": false,
+    "git.enabled": true
 }
